--- a/src/app/author-books/author-books.component.html
+++ b/src/app/author-books/author-books.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 col-md-4" *ngFor="let book of books">
+    <div class="col-12 col-md-4" *ngFor="let book of Books">
       <div class="card align-items-center" style="width: 20rem;">
         <img class="card-img-top img-thumbnail" [src]="book.imgUrl" alt="Card image cap">
         <div class="card-body text-center">
