--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
 <hr style="width: 40%; align-items:center; color: brown;">
-<app-home></app-home>
+<router-outlet></router-outlet>
