--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<hr style="width: 40%; align-items:center; color: brown;">
-<router-outlet></router-outlet>
+<div class="container">
+    <flash-messages></flash-messages>
+    <router-outlet></router-outlet>
+</div>
