--- a/src/app/components/category-books/category-books.component.html
+++ b/src/app/components/category-books/category-books.component.html
@@ -7,7 +7,7 @@
           <h5 class="card-title">{{book.name}}</h5>
           <p class="card-text">Category -{{book.category}}</p>
           <p class="card-text">Price -{{book.price}}</p>
-          <a href="#" class="btn btn-primary" routerLink='/buy'>Buy</a>
+          <a href="#" class="btn btn-primary" [routerLink]="['/buy',book.name]">Buy</a>
         </div>
       </div>
     </div>
